--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=contacs
+spring.application.name=contacts
 spring.datasource.url=jdbc:mysql://localhost:3306/help_desk_test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -6,6 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#Springdoc OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
